--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.7",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^7.0.1",
@@ -23,6 +24,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "stripe": "^8.215.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
