--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "^9.6.7",
-    "lodash.memoize": "^4.1.2",
-    "node-sass": "^7.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.0",
-    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
-    "serverless-http": "^3.0.1",
-    "stripe": "^8.215.0",
+    "sass": "^1.50.0",
+    "serverless-http": "^2.7.0",
+    "stripe": "^8.210.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
