--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@stripe/react-stripe-js": "^1.7.0",
-    "@stripe/stripe-js": "^1.26.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@stripe/stripe-js": "^1.25.0",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "9.6.6",
@@ -22,11 +22,11 @@
     "redux-saga": "1.1.3",
     "redux-thunk": "2.4.1",
     "reselect": "4.1.5",
-    "sass": "^1.50.0",
+    "sass": "1.49.7",
     "serverless-http": "^2.7.0",
     "stripe": "^8.210.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "5.3.3",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
