--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/redux-logger": "^3.0.9",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "9.6.6",
@@ -21,7 +22,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "redux": "4.1.2",
-    "redux-logger": "3.0.6",
+    "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
     "redux-thunk": "2.4.1",
